[package]
name = "moco_abm"
description = "MOCO - Anytime Behavior Model (moco-abm)"
version = "0.1.1"
authors = ["Alexandre D. Jesus <adbjesus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adbjesus/moco-abm"
readme = "README.md"

[[bin]]
name = "moco-abm"
path = "src/main.rs"

[dependencies]
clap = "2.32"
