[package]
name = "moco_abm"
description = "MOCO - Anytime Behavior Model (moco_abm)"
version = "0.2.0"
authors = ["Alexandre D. Jesus <adbjesus@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/adbjesus/moco_abm"
readme = "README.md"

[[bin]]
name = "moco_abm"
path = "src/main.rs"

[dependencies]
num-traits = "0.2"
